Complete JWT and resume tailoring